--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "version": 2,
   "builds": [
     { "src": "/index.js","use": "@vercel/node" },
-    { "src": "static/**","use": "@vercel/public" },
-    { "src": "*.json","use": "@vercel/public" }
+    { "src": "static/**","use": "@vercel/static" },
+    { "src": "*.json","use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/","dest": "/public/index.html" }
