--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,6 @@
   ],
   "routes": [
     { "src": "/","dest": "/public/index.html" },
-    { "src": "/.*","dest": "/app.js" }
+    { "src": "/.*","dest": "/server.js" }
   ]
 }
