--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "builds": [
-    { "src": "app.js","use": "@vercel/node" },
+    { "src": "server.js","use": "@vercel/node" },
     { "src": "public/**","use": "@vercel/static" },
     { "src": "*.json","use": "@vercel/static" }
   ],
