--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,9 @@
   "version": 2,
   "builds": [
     { "src": "server.js","use": "@vercel/node" },
-    { "src": "public/**","use": "@vercel/static" },
+    { "src": "lib/**","use": "@vercel/static" },
+    { "src": "ssl/**","use": "@vercel/static" },
+    { "src": "node_modules/**","use": "@vercel/static" },
     { "src": "*.json","use": "@vercel/static" }
   ],
   "routes": [
